# CTFSolverScript

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: static.yml
app/CTFSolverScript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/ctfsolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/ctfsolver/config/: config_template.json  global_config.py
app/ctfsolver/data/: challenge_info_template.json  config_template.json
app/ctfsolver/error/: manager_error.py
app/ctfsolver/find_usage/: __main__.py
app/ctfsolver/inline/: __main__.py  inline_tool.py  parser.py
app/ctfsolver/managers/: manager_connections.py  manager_file.py  manager_files_re.py  manager_folder.py
app/ctfsolver/run/: __main__.py
app/ctfsolver/scripts/: README.md  __main__.py  (+1 more)
docs/: Makefile  README.md  TODO.md  command.sh
docs/TODO/: TODO.md  decorator.md  documentation.md  function_adder.md  linking.md  venvs_manager.md
docs/actions/: installation_manual.md  makefile.md
docs/ctfsolver/: index.html
docs/helpers/: helper.html  rst_helper.html
docs/pdoc/: Makefile  README.md
docs/pdoc_html/: mock_pwn.py
docs/sphinx_documentation/: README.md  conf.py  ctfsolver.find_usage.rst  ctfsolver.rst  ctfsolver.src.rst  modules.rst
docs/usage/: current.md
docs/workflows/: building.yml
requirements/: requirements-all.txt  requirements-dev.txt  requirements-docs-pdoc3.txt  requirements-docs-sqphinx.txt  requirements-future.txt  requirements-old.txt  requirements.txt
(+194 files in other folders)
