[metadata]
name = ctfsolver.ctfsolver

description = Python package for solving CTFs

[options] 
install_requires = 
    bcrypt
    capstone
    certifi
    cffi
    charset-normalizer
    colored-traceback
    cryptography
    idna
    intervaltree
    Mako
    MarkupSafe
    packaging
    paramiko
    plumbum
    psutil
    pwntools
    pycparser
    pyelftools
    Pygments
    PyNaCl
    pyserial
    PySocks
    python-dateutil
    requests
    ROPGadget
    rpyc
    six
    sortedcontainers
    unicorn
    unix-ar
    urllib3 
    zstandard   