[metadata]
name = ctfsolver.ctfsolver

description = Python package for solving CTFs

[options] 
install_requires = 
    alabaster
    babel
    bcrypt
    capstone
    certifi
    cffi
    charset-normalizer
    colored-traceback
    configparser
    cryptography
    ctfsolver
    docutils
    evtx
    hexdump
    idna
    imagesize
    intervaltree
    Jinja2
    Mako
    MarkupSafe
    more-itertools
    packaging
    paramiko
    plumbum
    psutil
    pwntools
    pycparser
    pyelftools
    Pygments
    PyNaCl
    pyparsing
    pyserial
    PySocks
    python-dateutil
    python-evtx
    requests
    ROPGadget
    rpyc
    scapy
    six
    snowballstemmer
    sortedcontainers
    unicorn
    unix-ar
    urllib3
    zipp
    zstandard   
